GNOME Bugzilla – Bug 782873
adaptivedemux: format '%llu' expects argument of type 'long long unsigned int', but argument 8 has type 'gsize {aka unsigned int}' on MacOS
Last modified: 2017-05-20 17:21:55 UTC
The build currently fails as follows: make[4]: Entering directory '/home/pi/packages/gstreamer-master/gst-plugins-bad/gst-libs/gst/adaptivedemux' CC libgstadaptivedemux_1.0_la-gstadaptivedemux.lo In file included from /usr/local/include/gstreamer-1.0/gst/gst.h:55:0, from gstadaptivedemux.h:25, from gstadaptivedemux.c:122: gstadaptivedemux.c: In function 'gst_adaptive_demux_stream_push_buffer': gstadaptivedemux.c:2403:7: error: format '%llu' expects argument of type 'long long unsigned int', but argument 8 has type 'gsize {aka unsigned int}' [-Werror=format=] "About to push buffer of size %" G_GUINT64_FORMAT, ^ /usr/local/include/gstreamer-1.0/gst/gstinfo.h:638:31: note: in definition of macro 'GST_CAT_LEVEL_LOG' (GObject *) (object), __VA_ARGS__); \ ^~~~~~~~~~~ gstadaptivedemux.c:2402:3: note: in expansion of macro 'GST_DEBUG_OBJECT' GST_DEBUG_OBJECT (stream->pad, ^~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors Makefile:900: recipe for target 'libgstadaptivedemux_1.0_la-gstadaptivedemux.lo' failed make[4]: *** [libgstadaptivedemux_1.0_la-gstadaptivedemux.lo] Error 1 make[4]: Leaving directory '/home/pi/packages/gstreamer-master/gst-plugins-bad/gst-libs/gst/adaptivedemux' Makefile:811: recipe for target 'all-recursive' failed
Created attachment 352228 [details] [review] Fix the type G_GUINT64_FORMAT -> G_GSIZE_FORMAT Fix the type G_GUINT64_FORMAT -> G_GSIZE_FORMAT.
Thanks! commit 711b006cb91783d1a99a4acf05c91555ae63298e Author: Graham Leggett <minfrin@sharp.fm> Date: Sat May 20 16:22:10 2017 +0000 adaptivedemux: fix debug message printf format Match gsize to G_GSIZE_FORMAT in the debug message. https://bugzilla.gnome.org/show_bug.cgi?id=782873